fix: ralat overflow on drawer mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -739,15 +739,13 @@ svg { vertical-align: baseline; }
 .box-hover:hover {
   box-shadow: 0 0 11px rgba(33,33,33,.2);
 }
-
-@media screen and (max-width: 1023px) {
+.drawer-mt {
+  margin-top: auto;
+}
+@media (min-width: 768px) and (max-width: 1023px) {
   .drawer-mt {
-    margin-top: clamp(14rem, 23.0353rem + -18.8235vw, 11rem);
+    margin-top: clamp(17rem, 26.0353rem + -18.8235vw, 14rem);
   }
 }
-@media screen and (max-width: 767px) {
-  .drawer-ml {
-    margin-left: clamp(9rem, -6.3061rem + 65.3061vw, 25rem);
-  }
-}
+
 
